<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chef</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="developed_by">Developed By Lexosoft</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="IAccept">I Accept The License Agreement</string>
    <string name="IHAA">I have an account</string>
    <string name="title_activity_login">Login</string>

</resources>
